--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,10 +33,24 @@ dependencies:
   firebase_core: ^0.4.0+9
   firebase_auth: ^0.14.0+5
   cloud_firestore: ^0.12.9+5
+  dropdownfield: ^1.0.3
+  fluttertoast: ^7.0.4
+
+
+  #Another Plugin
+  provider: ^4.3.2+2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
+  flutter_launcher_icons: "^0.7.3"
+
+flutter_icons:
+  image_path: "assets/images/icon.png"
+  android: "ic_launcher" # can specify file name here e.g. "ic_launcher"
+  ios: false # can specify file name here e.g. "My-Launcher-Icon"
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -53,6 +67,9 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+
+  assets:
+  - assets/images/majapahitid-logo.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
